<?xml version="1.0" encoding="utf-8"?>
   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#165c33"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.goodluck.a4u.loginActivity"
    tools:showIn="@layout/activity_login">


       <TextView
           android:id="@+id/emailText"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/email_name"
           android:textSize="20dp"
           android:textColor="#ffffff"
           android:layout_marginLeft="24dp"
           android:layout_marginStart="24dp"
           android:layout_alignParentTop="true"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:layout_marginTop="182dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:layout_marginTop="17dp"
        android:width="320dp"
        android:layout_below="@+id/emailText"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailText"
        android:layout_alignStart="@+id/emailText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="14dp"
        android:text="@string/password"
        android:textSize="20dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:width="320dp"
        android:layout_below="@+id/passwordText"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:onClick="onclick1"
        android:background="#165c33" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button2"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/sign_up_button"
        android:background="#165c33" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginTop="34dp"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3"
        android:text="@string/skip_button"
        android:background="#165c33" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/basketlogo"
        android:layout_marginBottom="50dp"
        android:layout_alignBottom="@+id/emailText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>